--- a/quest/index.html
+++ b/quest/index.html
@@ -21,13 +21,19 @@
     <main>
         <section class="main-section">
            quest!
+            <h1></h1>
+            <img/>
+            <p></p>
+            <form>
+                
+            </form>
         </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
     </footer>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./quest.js"></script>
 </body>
 
 </html>
