--- a/quest/index.html
+++ b/quest/index.html
@@ -27,6 +27,10 @@
             <form>
                 
             </form>
+            <div id="results">
+                <span id="results-span"></span>
+                <button id="back-to-map">Back to map!</button>
+            </div>
         </section>
     </main>
     <footer>
